#15 fixed icon alignment

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -41,6 +41,7 @@ ul.icons a {
   padding: 0;
   font-size: 1em;
   margin-bottom:20px;
+  text-align: center;
 }
 
 .header-right p {
